<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Landing">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="28sp"
        android:textColor="@color/secondary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/user_icon"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:padding="4dp"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name"
        android:textColor="@color/secondary"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image"/>

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_greetings"
        android:textColor="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="44dp"
        android:padding="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"/>

    <TextView
        android:id="@+id/greetings2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_greetings2"
        android:textColor="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetings"
        android:textSize="28dp"
        android:padding="4dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/gotohome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary"
        android:text="@string/gotohome"
        android:background="@drawable/border"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetings2"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="18dp"
        />

    <TextView
        android:id="@+id/liveclass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary"
        android:text="@string/liveclass"
        android:background="@drawable/border"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gotohome"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="18dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>