<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="40dp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon"
            android:padding="4dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/top_guideline"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title"
            android:textSize="28sp"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/top_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="4dp"
            />


        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/user_icon"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_name"
            android:textColor="@color/secondary"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="@id/profile_image"/>

        <TextView
            android:id="@+id/todays_classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="4dp"
            android:layout_marginStart="8dp"
            />

        <LinearLayout
            android:id="@+id/class_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/todays_classes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="4dp"
            >
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>